# openshift_rust_app

./: Cargo.toml  DockerFile
.github/workflows/: docker_build.yml
src/: index.html  lib.rs  main.rs
