[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
futures = "0.3.24"
actix-lab = "0.1.0"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.15"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.3"